Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500

      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500

      - path: /ready
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500

      - path: /started
        pathType: Exact
        backend:
          service:
            name: api
            port:
              number: 3500

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
